Created DB implementation for Club & Person

--- a/src/Orbital.Models/Orbital.Models.csproj
+++ b/src/Orbital.Models/Orbital.Models.csproj
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
     <DebugType>portable</DebugType>
     <AssemblyName>Orbital.Models</AssemblyName>
+    <NuGetPackageRoot>$(USERPROFILE)\.nuget\packages\</NuGetPackageRoot>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" />
