--- a/src/Orbital.Web/Orbital.Web.csproj
+++ b/src/Orbital.Web/Orbital.Web.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <DebugType>portable</DebugType>
@@ -7,36 +6,32 @@
     <OutputType>Exe</OutputType>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="**\*.cs" />
     <EmbeddedResource Include="**\*.resx" />
     <EmbeddedResource Include="compiler\resources\**\*" />
   </ItemGroup>
-
   <ItemGroup>
+    <ProjectReference Include="..\DbUp.Postgresql\DbUp.Postgresql.csproj" />
     <ProjectReference Include="..\Orbital.Data\Orbital.Data.csproj" />
     <ProjectReference Include="..\Orbital.Models\Orbital.Models.csproj" />
     <ProjectReference Include="..\Orbital.Schema\Orbital.Schema.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="GraphQL">
-      <Version>0.14.*</Version>
+      <Version>0.14.1.638</Version>
     </PackageReference>
+    <PackageReference Include="Npgsql" Version="3.1.9" />
     <PackageReference Include="SimpleInjector">
       <Version>3.3.*</Version>
     </PackageReference>
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">
     <PackageReference Include="Microsoft.NETCore.App">
       <Version>1.1.0</Version>
     </PackageReference>
   </ItemGroup>
-
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
   </PropertyGroup>
-
 </Project>
