--- a/src/Orbital.Web/Orbital.Web.csproj
+++ b/src/Orbital.Web/Orbital.Web.csproj
@@ -23,7 +23,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql" Version="3.1.9" />
     <PackageReference Include="SimpleInjector">
-      <Version>3.3.*</Version>
+      <Version>3.3.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">
