--- a/test/Orbital.Schema.Tests/Orbital.Schema.Tests.csproj
+++ b/test/Orbital.Schema.Tests/Orbital.Schema.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <DebugType>portable</DebugType>
@@ -18,9 +18,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
-      <Version>15.0.0-preview-20161227-02</Version>
+      <Version>15.0.0-preview-20170106-08</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0-preview-20161227-02" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0-preview-20170106-08" />
     <PackageReference Include="xunit.runner.visualstudio">
       <Version>2.2.0-beta4-build1215</Version>
     </PackageReference>
