--- a/test/Orbital.Data.Tests/Orbital.Data.Tests.csproj
+++ b/test/Orbital.Data.Tests/Orbital.Data.Tests.csproj
@@ -43,6 +43,9 @@
       <Version>1.1.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
   </PropertyGroup>
