--- a/test/Orbital.Web.Tests/Orbital.Web.Tests.csproj
+++ b/test/Orbital.Web.Tests/Orbital.Web.Tests.csproj
@@ -1,16 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <DebugType>portable</DebugType>
-    <AssemblyName>Orbital.Web.Tests</AssemblyName>
-    <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">$(PackageTargetFallback);dotnet5.4;portable-net451+win8</PackageTargetFallback>
-    <OutputType Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">Exe</OutputType>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="**\*.cs" />
-    <EmbeddedResource Include="**\*.resx" />
-    <EmbeddedResource Include="compiler\resources\**\*" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\DbUp.Postgresql\DbUp.Postgresql.csproj" />
     <ProjectReference Include="..\..\src\Orbital.Data\Orbital.Data.csproj" />
@@ -20,31 +11,23 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
-      <Version>15.0.0-preview-20170113-02</Version>
+      <Version>15.0.0-preview-20170217-05</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0-preview-20170113-02" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0-preview-20170217-05" />
     <PackageReference Include="xunit.runner.visualstudio">
-      <Version>2.2.0-beta5-build1225</Version>
+      <Version>2.2.0-rc4-build1270</Version>
     </PackageReference>
     <PackageReference Include="GraphQL">
-      <Version>0.14.4.649</Version>
+      <Version>0.14.6.657</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Serialization.Primitives">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
-      <Version>2.2.0-beta5-build3474</Version>
+      <Version>2.2.0-rc4-build3536</Version>
     </PackageReference>
     <PackageReference Include="Moq">
       <Version>4.6.38-alpha</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">
-    <PackageReference Include="Microsoft.NETCore.App">
-      <Version>1.1.0</Version>
-    </PackageReference>
-  </ItemGroup>
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
-  </PropertyGroup>
 </Project>
