--- a/test/Orbital.Data.Tests/Orbital.Data.Tests.csproj
+++ b/test/Orbital.Data.Tests/Orbital.Data.Tests.csproj
@@ -1,33 +1,33 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Respawn\Respawn.csproj" />
     <ProjectReference Include="..\..\src\DbUp.Postgresql\DbUp.Postgresql.csproj" />
     <ProjectReference Include="..\..\src\Orbital.Data\Orbital.Data.csproj" />
     <ProjectReference Include="..\..\src\Orbital.Models\Orbital.Models.csproj" />
+    <ProjectReference Include="..\..\src\Respawn\Respawn.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="dbup4-core" Version="4.0.0-beta0003" />
     <PackageReference Include="Microsoft.NET.Test.Sdk">
-      <Version>15.0.0-preview-20170217-05</Version>
+      <Version>15.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0-preview-20170217-05" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0" />
     <PackageReference Include="xunit.runner.visualstudio">
-      <Version>2.2.0-rc4-build1270</Version>
+      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="GraphQL">
-      <Version>0.14.6.657</Version>
+      <Version>0.15.0.671</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Serialization.Primitives">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
-      <Version>2.2.0-rc4-build3536</Version>
+      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Moq">
-      <Version>4.6.38-alpha</Version>
+      <Version>4.7.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
