--- a/test/Orbital.Schema.Tests/Orbital.Schema.Tests.csproj
+++ b/test/Orbital.Schema.Tests/Orbital.Schema.Tests.csproj
@@ -9,23 +9,23 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
-      <Version>15.0.0-preview-20170217-05</Version>
+      <Version>15.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0-preview-20170217-05" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0" />
     <PackageReference Include="xunit.runner.visualstudio">
-      <Version>2.2.0-rc4-build1270</Version>
+      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="GraphQL">
-      <Version>0.14.6.657</Version>
+      <Version>0.15.0.671</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Serialization.Primitives">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
-      <Version>2.2.0-rc4-build3536</Version>
+      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Moq">
-      <Version>4.6.38-alpha</Version>
+      <Version>4.7.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
