--- a/test/Orbital.Services.Test/Orbital.Services.Test.csproj
+++ b/test/Orbital.Services.Test/Orbital.Services.Test.csproj
@@ -6,13 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <PackageReference Include="Moq" Version="4.7.0" />
+    <PackageReference Include="xunit" Version="2.3.0-beta1-build3631" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta1-build1304" />
+    <PackageReference Include="Moq" Version="4.7.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Orbital.Services\Orbital.Services.csproj" />
     <ProjectReference Include="..\..\src\Orbital.Data\Orbital.Data.csproj" />
     <ProjectReference Include="..\..\src\Orbital.Models\Orbital.Models.csproj" />
   </ItemGroup>
