--- a/test/Orbital.Web.Tests/Orbital.Web.Tests.csproj
+++ b/test/Orbital.Web.Tests/Orbital.Web.Tests.csproj
@@ -15,19 +15,19 @@
     </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0" />
     <PackageReference Include="xunit.runner.visualstudio">
-      <Version>2.2.0</Version>
+      <Version>2.3.0-beta1-build1304</Version>
     </PackageReference>
     <PackageReference Include="GraphQL">
-      <Version>0.15.0.671</Version>
+      <Version>0.15.1.678</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Serialization.Primitives">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
-      <Version>2.2.0</Version>
+      <Version>2.3.0-beta1-build3631</Version>
     </PackageReference>
     <PackageReference Include="Moq">
-      <Version>4.7.0</Version>
+      <Version>4.7.8</Version>
     </PackageReference>
   </ItemGroup>
 </Project>
