--- a/src/Orbital.Web/Orbital.Web.csproj
+++ b/src/Orbital.Web/Orbital.Web.csproj
@@ -1,22 +1,26 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <AssemblyName>Orbital.Web</AssemblyName>
-    <OutputType>Exe</OutputType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
+    <PackageReference Include="Npgsql" Version="3.2.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0-rc3" />
+  </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DbUp.Postgresql\DbUp.Postgresql.csproj" />
     <ProjectReference Include="..\Orbital.Data\Orbital.Data.csproj" />
-    <ProjectReference Include="..\Orbital.Models\Orbital.Models.csproj" />
-    <ProjectReference Include="..\Orbital.Schema\Orbital.Schema.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="GraphQL">
-      <Version>0.15.1.678</Version>
-    </PackageReference>
-    <PackageReference Include="Npgsql" Version="3.2.2" />
-    <PackageReference Include="SimpleInjector">
-      <Version>3.3.2</Version>
-    </PackageReference>
-  </ItemGroup>
+
 </Project>
