--- a/test/Orbital.Data.Tests/Orbital.Data.Tests.csproj
+++ b/test/Orbital.Data.Tests/Orbital.Data.Tests.csproj
@@ -8,10 +8,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="dbup4-core" Version="4.0.0-beta0003" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="1.1.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk">
       <Version>15.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0" />
     <PackageReference Include="xunit.runner.visualstudio">
       <Version>2.2.0</Version>
     </PackageReference>
