--- a/src/Orbital.Versioning/Orbital.Versioning.csproj
+++ b/src/Orbital.Versioning/Orbital.Versioning.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard1.5</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
     <PackageReference Include="Mono.Cecil" Version="0.10.0-beta6" />
