--- a/test/Orbital.Data.Tests/Orbital.Data.Tests.csproj
+++ b/test/Orbital.Data.Tests/Orbital.Data.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Orbital.Data\Orbital.Data.csproj" />
@@ -8,26 +8,26 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="dbup4-core" Version="4.0.0-beta0003" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.0-preview2-final" />
     <PackageReference Include="Microsoft.NET.Test.Sdk">
-      <Version>15.0.0</Version>
+      <Version>15.3.0-preview-20170628-02</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.0.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0-preview2-final" />
     <PackageReference Include="xunit.runner.visualstudio">
-      <Version>2.2.0</Version>
+      <Version>2.3.0-beta3-build3705</Version>
     </PackageReference>
     <PackageReference Include="GraphQL">
-      <Version>0.15.1.678</Version>
+      <Version>0.17.1</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Serialization.Primitives">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
-      <Version>2.2.0</Version>
+      <Version>2.3.0-beta3-build3705</Version>
     </PackageReference>
     <PackageReference Include="Moq">
-      <Version>4.7.63</Version>
+      <Version>4.7.99</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
